--- a/index.html
+++ b/index.html
@@ -12,27 +12,29 @@
 <body>
     <form action="" class="flex">
         <div class="flex-content">
-            <div>
-                <div>
-                    <input type="text" readonly><br>
+            <div class="head gold">
+                <div class="screen-case">
+                    <input class="screen gray-medium" type="text" readonly><br>
                 </div>
                 <hr>
-                <input type="button" value="1">
-                <input type="button" value="2">
-                <input type="button" value="3">
-                <input type="button" value="*"><br>
-                <input type="button" value="4">
-                <input type="button" value="5">
-                <input type="button" value="6">
-                <input type="button" value="-"><br>
-                <input type="button" value="7">
-                <input type="button" value="8">
-                <input type="button" value="9">
-                <input type="button" value="+"><br>
-                <input type="button" value="C">
-                <input type="button" value="=">
-                <input type="button" value="0">
-                <input type="button" value="/"><br>
+                <div class="content gray-soft">
+                    <input type="button" value="1">
+                    <input type="button" value="2">
+                    <input type="button" value="3">
+                    <input type="button" value="*"><br>
+                    <input type="button" value="4">
+                    <input type="button" value="5">
+                    <input type="button" value="6">
+                    <input type="button" value="-"><br>
+                    <input type="button" value="7">
+                    <input type="button" value="8">
+                    <input type="button" value="9">
+                    <input type="button" value="+"><br>
+                    <input class="gray-green" type="button" value="C">
+                    <button class="gray-green">=</button>
+                    <input class="gray-green" type="button" value="0">
+                    <input class="gray-green" type="button" value="/"><br>
+                </div>
             </div>
         </div>
     </form>
