--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
                 </div>
                 <hr>
                 <div class="content gray-soft">
-                    <input type="button" value="1">
-                    <input type="button" value="2">
-                    <input type="button" value="3">
-                    <input type="button" value="*"><br>
-                    <input type="button" value="4">
-                    <input type="button" value="5">
-                    <input type="button" value="6">
-                    <input type="button" value="-"><br>
-                    <input type="button" value="7">
-                    <input type="button" value="8">
-                    <input type="button" value="9">
-                    <input type="button" value="+"><br>
+                    <input class="gray-dark" type="button" value="1">
+                    <input class="gray-dark" type="button" value="2">
+                    <input class="gray-dark" type="button" value="3">
+                    <input class="gray-dark" type="button" value="*"><br>
+                    <input class="gray-dark" type="button" value="4">
+                    <input class="gray-dark" type="button" value="5">
+                    <input class="gray-dark" type="button" value="6">
+                    <input class="gray-dark" type="button" value="-"><br>
+                    <input class="gray-dark" type="button" value="7">
+                    <input class="gray-dark" type="button" value="8">
+                    <input class="gray-dark" type="button" value="9">
+                    <input class="gray-dark" type="button" value="+"><br>
                     <input class="gray-green" type="button" value="C">
                     <button class="gray-green">=</button>
                     <input class="gray-green" type="button" value="0">
